# NomadCoders_Study

./: .gitignore  README.md
airbnb-clone-2022/: README.md
airbnb-clone-2022/airbnb-clone-backend/: README.md  pyproject.toml
airbnb-clone-2022/airbnb-clone-backend/bookings/: admin.py  models.py  serializer.py
airbnb-clone-2022/airbnb-clone-backend/bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
airbnb-clone-2022/airbnb-clone-backend/categories/: admin.py  models.py  serializer.py  urls.py  views.py
airbnb-clone-2022/airbnb-clone-backend/categories/migrations/: 0001_initial.py
airbnb-clone-2022/airbnb-clone-backend/common/: models.py
airbnb-clone-2022/airbnb-clone-backend/config/: authentication.py  settings.py  urls.py
airbnb-clone-2022/airbnb-clone-backend/direct_messages/: admin.py  models.py
airbnb-clone-2022/airbnb-clone-backend/direct_messages/migrations/: 0001_initial.py
airbnb-clone-2022/airbnb-clone-backend/experiences/: admin.py  models.py  views.py
airbnb-clone-2022/airbnb-clone-backend/houses/: admin.py  models.py
airbnb-clone-2022/airbnb-clone-backend/medias/: admin.py  models.py  views.py
airbnb-clone-2022/airbnb-clone-backend/reviews/: admin.py  models.py  serializers.py
airbnb-clone-2022/airbnb-clone-backend/rooms/: admin.py  models.py  serializers.py  tests.py  views.py
airbnb-clone-2022/airbnb-clone-backend/users/: admin.py  models.py  views.py
airbnb-clone-2022/airbnb-clone-backend/wishlists/: admin.py  models.py  serializer.py  serializers.py  views.py
(+57 files in other folders)
